src/adaptive_cards_renderer/tests/snapshots/snapshot_tests__snapshots@table.card.json.snap
---
source: adaptive_cards_renderer/tests/snapshot_tests.rs
expression: snapshot
input_file: adaptive_cards_renderer/tests/snapshot_inputs/table.card.json
---
{
  "card": {
    "$schema": "../../../../adaptive_cards_data/schema/adaptive-card.schema.json",
    "body": [
      {
        "type": "Table",
        "columns": [
          {},
          {
            "width": {
              "Number": 2.0
            }
          },
          {
            "width": {
              "String": "50px"
            }
          }
        ],
        "gridStyle": "accent",
        "rows": [
          {
            "cells": [
              {
                "items": [
                  {
                    "type": "TextBlock",
                    "text": "Narrow",
                    "wrap": true,
                    ".layout": {
                      "rect": {
                        "x": 25,
                        "y": 25,
                        "width": 90,
                        "height": 18
                      },
                      "placement": "SoleVertical"
                    }
                  }
                ],
                "type": "TableCell",
                ".layout": {
                  "rect": {
                    "x": 17,
                    "y": 17,
                    "width": 106,
                    "height": 34
                  },
                  "placement": "Left"
                }
              },
              {
                "items": [
                  {
                    "type": "TextBlock",
                    "text": "Wide",
                    "wrap": true,
                    ".layout": {
                      "rect": {
                        "x": 131,
                        "y": 25,
                        "width": 193,
                        "height": 18
                      },
                      "placement": "SoleVertical"
                    }
                  }
                ],
                "style": "accent",
                "type": "TableCell",
                ".layout": {
                  "rect": {
                    "x": 123,
                    "y": 17,
                    "width": 209,
                    "height": 34
                  },
                  "placement": "WithinHorizontal"
                }
              },
              {
                "items": [
                  {
                    "type": "TextBlock",
                    "text": "A",
                    "wrap": true,
                    ".layout": {
                      "rect": {
                        "x": 341,
                        "y": 25,
                        "width": 34,
                        "height": 18
                      },
                      "placement": "SoleVertical"
                    }
                  }
                ],
                "type": "TableCell",
                ".layout": {
                  "rect": {
                    "x": 333,
                    "y": 17,
                    "width": 50,
                    "height": 34
                  },
                  "placement": "Right"
                }
              }
            ],
            "type": "TableRow",
            ".layout": {
              "rect": {
                "x": 17,
                "y": 17,
                "width": 366,
                "height": 34
              },
              "placement": "Top"
            }
          },
          {
            "cells": [
              {
                "items": [
                  {
                    "type": "TextBlock",
                    "text": "Narrow 2",
                    "wrap": true,
                    ".layout": {
                      "rect": {
                        "x": 25,
                        "y": 60,
                        "width": 90,
                        "height": 18
                      },
                      "placement": "SoleVertical"
                    }
                  }
                ],
                "type": "TableCell",
                ".layout": {
                  "rect": {
                    "x": 17,
                    "y": 52,
                    "width": 106,
                    "height": 52
                  },
                  "placement": "Left"
                }
              },
              {
                "items": [
                  {
                    "type": "TextBlock",
                    "text": "Wide 2",
                    "wrap": true,
                    ".layout": {
                      "rect": {
                        "x": 131,
                        "y": 60,
                        "width": 193,
                        "height": 18
                      },
                      "placement": "SoleVertical"
                    }
                  }
                ],
                "style": "accent",
                "type": "TableCell",
                ".layout": {
                  "rect": {
                    "x": 123,
                    "y": 52,
                    "width": 209,
                    "height": 52
                  },
                  "placement": "WithinHorizontal"
                }
              },
              {
                "items": [
                  {
                    "type": "TextBlock",
                    "text": "Fixed 2",
                    "wrap": true,
                    ".layout": {
                      "rect": {
                        "x": 341,
                        "y": 60,
                        "width": 34,
                        "height": 36
                      },
                      "placement": "SoleVertical"
                    }
                  }
                ],
                "style": "accent",
                "type": "TableCell",
                ".layout": {
                  "rect": {
                    "x": 333,
                    "y": 52,
                    "width": 50,
                    "height": 52
                  },
                  "placement": "Right"
                }
              }
            ],
            "type": "TableRow",
            ".layout": {
              "rect": {
                "x": 17,
                "y": 52,
                "width": 366,
                "height": 52
              },
              "placement": "WithinVertical"
            }
          },
          {
            "cells": [
              {
                "items": [
                  {
                    "type": "TextBlock",
                    "text": "Narrow 3",
                    "wrap": true,
                    ".layout": {
                      "rect": {
                        "x": 25,
                        "y": 113,
                        "width": 90,
                        "height": 18
                      },
                      "placement": "SoleVertical"
                    }
                  }
                ],
                "type": "TableCell",
                ".layout": {
                  "rect": {
                    "x": 17,
                    "y": 105,
                    "width": 106,
                    "height": 52
                  },
                  "placement": "Left"
                }
              },
              {
                "items": [
                  {
                    "type": "TextBlock",
                    "text": "Wide 3",
                    "wrap": true,
                    ".layout": {
                      "rect": {
                        "x": 131,
                        "y": 113,
                        "width": 193,
                        "height": 18
                      },
                      "placement": "SoleVertical"
                    }
                  }
                ],
                "type": "TableCell",
                ".layout": {
                  "rect": {
                    "x": 123,
                    "y": 105,
                    "width": 209,
                    "height": 52
                  },
                  "placement": "WithinHorizontal"
                }
              },
              {
                "items": [
                  {
                    "type": "TextBlock",
                    "text": "Fixed 3",
                    "wrap": true,
                    ".layout": {
                      "rect": {
                        "x": 341,
                        "y": 113,
                        "width": 34,
                        "height": 36
                      },
                      "placement": "SoleVertical"
                    }
                  }
                ],
                "type": "TableCell",
                ".layout": {
                  "rect": {
                    "x": 333,
                    "y": 105,
                    "width": 50,
                    "height": 52
                  },
                  "placement": "Right"
                }
              }
            ],
            "style": "accent",
            "type": "TableRow",
            ".layout": {
              "rect": {
                "x": 17,
                "y": 105,
                "width": 366,
                "height": 52
              },
              "placement": "Bottom"
            }
          }
        ],
        ".layout": {
          "rect": {
            "x": 16,
            "y": 16,
            "width": 368,
            "height": 142
          },
          "placement": "SoleVertical"
        }
      }
    ],
    "version": "1.6",
    "type": "AdaptiveCard",
    ".layout": {
      "rect": {
        "x": 0,
        "y": 0,
        "width": 400,
        "height": 200
      }
    }
  },
  "debug_lines": [
    "TREE",
    "└──  FLEX COL [x: 0    y: 0    w: 400  h: 200  content_w: 384  content_h: 158  border: l:0 r:0 t:0 b:0, padding: l:16 r:16 t:16 b:16] (NodeId(4294967327))",
    "    └──  FLEX COL [x: 16   y: 16   w: 368  h: 142  content_w: 367  content_h: 141  border: l:0 r:0 t:0 b:0, padding: l:1 r:1 t:1 b:1] (NodeId(4294967326))",
    "        ├──  FLEX ROW [x: 1    y: 1    w: 366  h: 34   content_w: 366  content_h: 34   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967305))",
    "        │   ├──  FLEX COL [x: 0    y: 0    w: 106  h: 34   content_w: 98   content_h: 26   border: l:0 r:0 t:0 b:0, padding: l:8 r:8 t:8 b:8] (NodeId(4294967298))",
    "        │   │   └──  LEAF [x: 8    y: 8    w: 90   h: 18   content_w: 46   content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967297))",
    "        │   ├──  LEAF [x: 106  y: 0    w: 0    h: 34   content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967299))",
    "        │   ├──  FLEX COL [x: 106  y: 0    w: 209  h: 34   content_w: 201  content_h: 26   border: l:0 r:0 t:0 b:0, padding: l:8 r:8 t:8 b:8] (NodeId(4294967301))",
    "        │   │   └──  LEAF [x: 8    y: 8    w: 193  h: 18   content_w: 32   content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967300))",
    "        │   ├──  LEAF [x: 315  y: 0    w: 1    h: 34   content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967302))",
    "        │   └──  FLEX COL [x: 316  y: 0    w: 50   h: 34   content_w: 42   content_h: 26   border: l:0 r:0 t:0 b:0, padding: l:8 r:8 t:8 b:8] (NodeId(4294967304))",
    "        │       └──  LEAF [x: 8    y: 8    w: 34   h: 18   content_w: 9    content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967303))",
    "        ├──  LEAF [x: 1    y: 35   w: 366  h: 1    content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967306))",
    "        ├──  FLEX ROW [x: 1    y: 36   w: 366  h: 52   content_w: 366  content_h: 52   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967315))",
    "        │   ├──  FLEX COL [x: 0    y: 0    w: 106  h: 52   content_w: 98   content_h: 26   border: l:0 r:0 t:0 b:0, padding: l:8 r:8 t:8 b:8] (NodeId(4294967308))",
    "        │   │   └──  LEAF [x: 8    y: 8    w: 90   h: 18   content_w: 57   content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967307))",
    "        │   ├──  LEAF [x: 106  y: 0    w: 0    h: 52   content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967309))",
    "        │   ├──  FLEX COL [x: 106  y: 0    w: 209  h: 52   content_w: 201  content_h: 26   border: l:0 r:0 t:0 b:0, padding: l:8 r:8 t:8 b:8] (NodeId(4294967311))",
    "        │   │   └──  LEAF [x: 8    y: 8    w: 193  h: 18   content_w: 43   content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967310))",
    "        │   ├──  LEAF [x: 315  y: 0    w: 1    h: 52   content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967312))",
    "        │   └──  FLEX COL [x: 316  y: 0    w: 50   h: 52   content_w: 45   content_h: 44   border: l:0 r:0 t:0 b:0, padding: l:8 r:8 t:8 b:8] (NodeId(4294967314))",
    "        │       └──  LEAF [x: 8    y: 8    w: 34   h: 36   content_w: 37   content_h: 36   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967313))",
    "        ├──  LEAF [x: 1    y: 88   w: 366  h: 1    content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967316))",
    "        └──  FLEX ROW [x: 1    y: 89   w: 366  h: 52   content_w: 366  content_h: 52   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967325))",
    "            ├──  FLEX COL [x: 0    y: 0    w: 106  h: 52   content_w: 98   content_h: 26   border: l:0 r:0 t:0 b:0, padding: l:8 r:8 t:8 b:8] (NodeId(4294967318))",
    "            │   └──  LEAF [x: 8    y: 8    w: 90   h: 18   content_w: 57   content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967317))",
    "            ├──  LEAF [x: 106  y: 0    w: 0    h: 52   content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967319))",
    "            ├──  FLEX COL [x: 106  y: 0    w: 209  h: 52   content_w: 201  content_h: 26   border: l:0 r:0 t:0 b:0, padding: l:8 r:8 t:8 b:8] (NodeId(4294967321))",
    "            │   └──  LEAF [x: 8    y: 8    w: 193  h: 18   content_w: 43   content_h: 18   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967320))",
    "            ├──  LEAF [x: 315  y: 0    w: 1    h: 52   content_w: 0    content_h: 0    border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967322))",
    "            └──  FLEX COL [x: 316  y: 0    w: 50   h: 52   content_w: 45   content_h: 44   border: l:0 r:0 t:0 b:0, padding: l:8 r:8 t:8 b:8] (NodeId(4294967324))",
    "                └──  LEAF [x: 8    y: 8    w: 34   h: 36   content_w: 37   content_h: 36   border: l:0 r:0 t:0 b:0, padding: l:0 r:0 t:0 b:0] (NodeId(4294967323))"
  ]
}
